# SFML_Chess

./: CMakeLists.txt  README.md
Chess/: CMakeLists.txt
Chess/Assets/Configurations/: Settings.ini
Chess/Src/: Config.cpp  Config.h  Game.cpp  Game.h  main.cpp
Chess/Src/ChessStateMachine/: ChessStateMachine.cpp  ChessStateMachine.h
Chess/Src/ChessStateMachine/States/: CheckMateState.cpp  CheckMateState.h  CheckState.cpp  CheckState.h  ChessState.cpp  ChessState.h  IdleState.cpp  IdleState.h  PieceSelectedState.cpp  PieceSelectedState.h
Chess/Src/GameStateMachine/: GameStateMachine.cpp  GameStateMachine.h
Chess/Src/GameStateMachine/States/: ChessState.cpp  ChessState.h  GameState.h  MainMenuState.cpp  MainMenuState.h  PauseMenuState.cpp  PauseMenuState.h
Chess/Src/Manager/: FontManager.h  Manager.h  SoundBufferManager.h  TextureManager.h
Chess/Src/Pieces/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
Chess/Src/StateMachine/: HierarchicalState.h  HierarchicalStateMachine.h  StackedState.h  StackedStateMachine.h
Chess/Src/Widgets/: Button.cpp  Button.h  Menu.h
Tests/: CMakeLists.txt  test_runner.cpp
Tests/ChessStatemachine/: test_IdleState.cpp
Tests/Pieces/: test_Bishop.cpp  test_Config.cpp  test_King.cpp  test_Knight.cpp  test_Pawn.cpp  test_Piece.cpp  test_Queen.cpp  test_Rook.cpp
Tests/mocks/Pieces/: Piece_Mock.h
